fixed delete method and added plus and minus colors

--- a/www/templates/modal.html
+++ b/www/templates/modal.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
   <ion-header-bar class="bar bar-header bar-positive">
     <h1 class="title">Nuevo Movimiento</h1>
-    <button class="button button-clear button-primary" ng-click="modal.hide()">Cancelar</button>
+    <button class="button button-clear button-primary" ng-click="closeModal()">Cancelar</button>
   </ion-header-bar>
   <ion-content class="padding">
     <div class="list">
