replaced spaces for tabs

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,12 +1,10 @@
 <ion-view view-title="Account">
-  <div class="bar bar-header bar-positive">
-    <div class="h1 title">Estadisticas</div>
-  </div>
-  <ion-content class="has-header">
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
-  </ion-content>
+	<div class="bar bar-header bar-positive">
+		<div class="h1 title">Estadisticas</div>
+	</div>
+	<ion-content class="has-header">
+		<ion-list>
+			<ion-toggle ng-model="settings.enableFriends">Enable Friends</ion-toggle>
+		</ion-list>
+	</ion-content>
 </ion-view>
