--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -5,6 +5,7 @@
 	<ion-content class="has-header">
 		<ion-list>
 			<ion-toggle ng-model="settings.enableFriends">Enable Friends</ion-toggle>
+			<ion-item><button class="button icon-left ion-trash-b button-positive" ng-click="clearData()">Limpiar Datos</button></ion-item>
 		</ion-list>
 	</ion-content>
 </ion-view>
