added confirm popup to clear data and fixes

--- a/www/templates/tab-activity.html
+++ b/www/templates/tab-activity.html
@@ -26,7 +26,7 @@
 				<div class="item item-divider">Total en Dólares: <span class="to-right">{{totalDollarBalance | currency}}</span></div>
 			</div>
 			<div class="card" ng-show="totalEarning">
-				<div class="item item-divider" >Resumen Total : {{totalEarning | currency}}</div>
+				<div class="item item-divider" >Resumen Total : {{totalEarning | currency}} Pesos</div>
 			</div>
 
 		</ion-list>
